--- a/css/style_classement.css
+++ b/css/style_classement.css
@@ -37,7 +37,7 @@ body{
     width: 100%;
     background-color: #007fff;
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 60px;
     padding-top: 0px;
     padding-bottom: 0px;
     height: 100px;
@@ -76,21 +76,29 @@ body{
     color: #000000;
 }
 
-/*style des tableaux*/
+/*paragraphe d'intro*/
 
-#tableaux {
-    background-color: #0c4c8c;
-    height: 5000px;
-    width: 70%;
-    position: absolute;
+#intro {
+    max-width: 65%;
+    margin: auto;
+    margin-bottom: 60px;
+    text-indent: 40px each-line;
+    text-align: justify;
 }
+
+h2 {
+    max-width: 65%;
+    margin: auto;
+}
+
+/*style des tableaux*/
 
 table{
     border: 0px solid;
     border-collapse:collapse;
     text-align: center;
     min-width:53%;
-    border: #fff solid 8px;
+    border: #e4e4e4 solid 8px;
     border-radius: 10px;
 }
 
