--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -190,7 +190,7 @@ footer {
 footer #logo {
     position: absolute;
     margin-top: 10px;
-    margin-left: 40px;
+    margin-left: 20px;
     height: 80px;
 }
 
@@ -213,16 +213,39 @@ footer #ix {
 footer #ins {
     position: absolute;
     margin-top: 27px;
-    right: 11%;
+    right: 100px;
     height: 48px;
     width: 48px;
     vertical-align: baseline;
 }
+
+footer p {
+    position: absolute;
+    display: inline-block;
+    font-size: 20px;
+}
+
+footer #ct {
+    right: 170px;
+    margin-top: 40px;
+}
+
+footer #ml {
+    margin-left: 110px;
+    margin-top: 40px;
+    color: #000000;
+    text-decoration: underline 2px;
+}
+
+footer #ml:hover {
+    color: #fe8103;
+    text-decoration: underline #fe8103 2px;
+}
 }
 @media only screen
 and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : landscape){
+and (max-device-width : 1100px)
+and (orientation : portrait){
 
 @font-face {
     font-family: 'Poppins';
@@ -346,7 +369,7 @@ article{
 }
 @media only screen
 and (min-device-width : 0px)
-and (max-device-width : 1080px)
+and (max-device-width : 767px)
 and (orientation : portrait) {
     #ligne{
         display: none;
@@ -457,6 +480,67 @@ img{
 #blanc{
     display: none;
 }
+
+/*style du footer -------------------------------------------------------------------------------------------------*/
+
+footer {
+    background-color: #0c4c8c;
+    height: 100px;
+    margin-bottom: -10px;
+    margin-top: 0px;
+}
+
+footer #logo {
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 20px;
+    height: 80px;
+}
+
+footer #fb {
+    position: absolute;
+    height: 70px;
+    width: 70px;
+    right: 10px;
+    margin: 0;
+    padding: 0;
+    margin-top: 15px;
+    z-index: 50;
+}
+
+footer #ins {
+    position: absolute;
+    margin: 0;
+    right: 94px;
+    margin-top: 27px;
+    height: 48px;
+    width: 48px;
+    vertical-align: baseline;
+}
+
+footer p {
+    position: absolute;
+    display: inline-block;
+    font-size: 20px;
+}
+
+footer #ct {
+    right: 170px;
+    margin-top: 40px;
+}
+
+footer #ml {
+    margin-left: 110px;
+    margin-top: 40px;
+    color: #000000;
+    text-decoration: underline 2px;
+}
+
+footer #ml:hover {
+    color: #fe8103;
+    text-decoration: underline #fe8103 2px;
+}
+
 }
 @media only screen
 and (min-device-width : 0px)
@@ -571,6 +655,64 @@ img{
 #blanc{
     display: none;
 }
+
+footer {
+    background-color: #0c4c8c;
+    height: 100px;
+    margin-bottom: -10px;
+    margin-top: 0px;
+}
+
+footer #logo {
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 20px;
+    height: 80px;
+}
+
+footer #fb {
+    position: absolute;
+    height: 70px;
+    width: 70px;
+    right: 10px;
+    margin: 0;
+    padding: 0;
+    margin-top: 15px;
+    z-index: 50;
+}
+
+footer #ins {
+    position: absolute;
+    margin: 0;
+    right: 94px;
+    margin-top: 27px;
+    height: 48px;
+    width: 48px;
+    vertical-align: baseline;
+}
+
+footer p {
+    position: absolute;
+    display: inline-block;
+    font-size: 20px;
+}
+
+footer #ct {
+    right: 170px;
+    margin-top: 40px;
+}
+
+footer #ml {
+    margin-left: 110px;
+    margin-top: 40px;
+    color: #000000;
+    text-decoration: underline 2px;
+}
+
+footer #ml:hover {
+    color: #fe8103;
+    text-decoration: underline #fe8103 2px;
+}
 }
 
 /*style du footer -------------------------------------------------------------------------------------------------*/
@@ -632,6 +774,7 @@ footer #ml:hover {
     color: #fe8103;
     text-decoration: underline #fe8103 2px;
 }
+
 
 @media only screen
     and (max-device-width: 645px) {
