--- a/css/style_statistique.css
+++ b/css/style_statistique.css
@@ -35,6 +35,7 @@ and (orientation : landscape) {
 body {
     margin: 0px;
     font-family: 'Poppins';
+    width: 100%;
 }
 
 /*Style du header*/
@@ -69,6 +70,8 @@ header #accueil {
     top: 50px;
     right: 5%;
     text-align: center; 
+    vertical-align: middle;
+    padding-top: 10px;
 }
 
 header #accueil a {
@@ -270,6 +273,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 20px;
     background-color: #f9f9f9;
+    width:100%;
 }
 
 table {
@@ -317,6 +321,10 @@ tfoot {
 tfoot td {
     font-size: 1.1em;
     color: #333;
+}
+
+caption{
+    text-decoration: underline;
 }
 
 @media only screen
