--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -133,8 +133,8 @@ body{
 #bleu{
     background-color: #0C4C8C;
     color:white;
-    width: 800px;
-    margin-left: 20%;
+    width: auto;
+    margin-left: 30%;
     margin-right: 10%;
     text-align: justify;
     padding: 20px;
@@ -146,7 +146,7 @@ body{
 }
 #grand_bleu{
     background-color: #0C4C8C;
-    width: 1200px;
+    width: auto;
 }
 #petit_blanc{
     background-color: white;
@@ -155,7 +155,7 @@ body{
 }
 #blanc{
     background-color: #ffffff;
-    width: 800px;
+    width: auto;
     margin-left: 23%;
     margin-right: 10%;
     text-align: justify;
@@ -334,17 +334,23 @@ body{
     position: relative;
 }
 img{
-    float : left;
+    float :initial;
     cursor: pointer;
 }
 #petit_blanc{
     background-color: #ffffff;
     max-width: 200px;
     position: absolute;
+    margin-left: 5%;
+}
+#bleu{
+    background-color: #0C4C8C;
+    color:white;
 }
 #boite{
     background-color: #D9D9D9;
     max-width: 150px;
+    margin-left: 5%;
 }
 article{
     margin-left: 15%;
@@ -353,13 +359,11 @@ article{
 }
 #grand_bleu{
     background-color: #0C4C8C;
-    width: 1200px;
 }
 #blanc{
     background-color: #ffffff;
-    width: 800px;
-    margin-left: 23%;
-    margin-right: 10%;
+    width: 400px;
+    margin: auto;
     text-align: justify;
     padding: 20px;
     border-radius: 0px 5px 5px 5px;
