manque le footer/header pour le téléphone

--- a/css/style_sponsors.css
+++ b/css/style_sponsors.css
@@ -1,6 +1,6 @@
 
 @media only screen
-and (min-device-width : 1024px)
+and (min-device-width : 976px)
 and (max-device-width : 5000px)
 and (orientation : landscape) {
 @font-face {
@@ -32,6 +32,78 @@ and (orientation : landscape) {
 body{
     font-family: 'Poppins';
     margin: 0px;
+}
+
+/*Style du header*/
+
+header {
+    height: 160px;
+    background-color: #0C4C8C;
+    margin-top: -24px;
+    border-bottom: #052544 solid;
+}
+
+header #logo_head {
+    height: 120px;
+    width: 120px;
+    border: none;
+    position: absolute;
+    margin-top: 20px;
+}
+
+header #accueil {
+    display: inline-block;
+    position: absolute;
+    height: 40px;
+    width: 150px;
+    font-size: 24px;
+    background-color: #fe8103;
+    border: none;
+    border-radius: 60px;
+    color: #ffffff;
+    box-shadow: 6px 4px 4px#00000050;
+    top: 50px;
+    right: 5%;
+    text-align: center; 
+}
+
+header #accueil a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header #accueil:hover {
+    background-color: #ffffff;
+}
+
+header #accueil:hover a {
+    color: #fe8103;
+}
+
+header h1 {
+    position: relative;
+    width: 400px;
+    margin-left: 220px;
+    top: 50px;
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+header #titre {
+    position: absolute;
+    background-color: #052544;
+    margin-left: 700px;
+    width: 300px;
+    height: 60px;
+    text-align: center;
+    margin-top: -30px;
+    padding-bottom: 20px;
+    border-radius: 15px;
+}
+
+header #titre p {
+    color: #fff;
+    font-size: 24px;
 }
 /*style de la nav du haut*/
 
@@ -242,6 +314,7 @@ footer #ml:hover {
     text-decoration: underline #fe8103 2px;
 }
 }
+
 @media only screen
 and (min-device-width : 768px)
 and (max-device-width : 1100px)
@@ -279,6 +352,79 @@ body{
 }
 #nav_haut{
     display: none;
+}
+
+/*Style du header*/
+
+header {
+    height: 160px;
+    background-color: #0C4C8C;
+    margin-top: -24px;
+    border-bottom: #052544 solid;
+}
+
+header #logo_head {
+    height: 120px;
+    width: 120px;
+    border: none;
+    position: absolute;
+    
+    margin-top: 20px;
+}
+
+header #accueil {
+    display: inline-block;
+    position: absolute;
+    height: 40px;
+    width: 150px;
+    font-size: 24px;
+    background-color: #fe8103;
+    border: none;
+    border-radius: 60px;
+    color: #ffffff;
+    box-shadow: 6px 4px 4px#00000050;
+    top: 50px;
+    right: 5%;
+    text-align: center; 
+}
+
+header #accueil a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header #accueil:hover {
+    background-color: #ffffff;
+}
+
+header #accueil:hover a {
+    color: #fe8103;
+}
+
+header h1 {
+    position: relative;
+    width: 400px;
+    margin-left: 220px;
+    top: 50px;
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+header #titre {
+    position: absolute;
+    background-color: #052544;
+    margin-left: 700px;
+    width: 300px;
+    height: 60px;
+    text-align: center;
+    margin-top: -30px;
+    padding-bottom: 20px;
+    border-radius: 15px;
+}
+
+header #titre p {
+    color: #fff;
+    font-size: 24px;
 }
 /*animation de la nav du bas*/
 
@@ -408,6 +554,79 @@ and (orientation : portrait) {
         font-family: 'Poppins';
         margin: 0px;
     }
+    
+/*Style du header*/
+
+header {
+    height: 160px;
+    background-color: #0C4C8C;
+    margin-top: -24px;
+    border-bottom: #052544 solid;
+}
+
+header #logo_head {
+    height: 120px;
+    width: 120px;
+    border: none;
+    position: absolute;
+    margin-left: -700px;
+    margin-top: 20px;
+}
+
+header #accueil {
+    display: inline-block;
+    position: absolute;
+    height: 40px;
+    width: 150px;
+    font-size: 24px;
+    background-color: #fe8103;
+    border: none;
+    border-radius: 60px;
+    color: #ffffff;
+    box-shadow: 6px 4px 4px#00000050;
+    top: 50px;
+    right: 5%;
+    text-align: center; 
+}
+
+header #accueil a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header #accueil:hover {
+    background-color: #ffffff;
+}
+
+header #accueil:hover a {
+    color: #fe8103;
+}
+
+header h1 {
+    position: relative;
+    width: 400px;
+    margin-left: 220px;
+    top: 50px;
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+header #titre {
+    position: absolute;
+    background-color: #052544;
+    margin-left: 700px;
+    width: 300px;
+    height: 60px;
+    text-align: center;
+    margin-top: -30px;
+    padding-bottom: 20px;
+    border-radius: 15px;
+}
+
+header #titre p {
+    color: #fff;
+    font-size: 24px;
+}
     /*style de la nav du haut*/
 
 #nav_haut {
@@ -583,6 +802,79 @@ and (orientation : landscape) {
         font-family: 'Poppins';
         margin: 0px;
     }
+    
+/*Style du header*/
+
+header {
+    height: 160px;
+    background-color: #0C4C8C;
+    margin-top: -24px;
+    border-bottom: #052544 solid;
+}
+
+header #logo_head {
+    height: 120px;
+    width: 120px;
+    border: none;
+    position: absolute;
+    margin-left: -700px;
+    margin-top: 20px;
+}
+
+header #accueil {
+    display: inline-block;
+    position: absolute;
+    height: 40px;
+    width: 150px;
+    font-size: 24px;
+    background-color: #fe8103;
+    border: none;
+    border-radius: 60px;
+    color: #ffffff;
+    box-shadow: 6px 4px 4px#00000050;
+    top: 50px;
+    right: 5%;
+    text-align: center; 
+}
+
+header #accueil a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header #accueil:hover {
+    background-color: #ffffff;
+}
+
+header #accueil:hover a {
+    color: #fe8103;
+}
+
+header h1 {
+    position: relative;
+    width: 400px;
+    margin-left: 220px;
+    top: 50px;
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+header #titre {
+    position: absolute;
+    background-color: #052544;
+    margin-left: 700px;
+    width: 300px;
+    height: 60px;
+    text-align: center;
+    margin-top: -30px;
+    padding-bottom: 20px;
+    border-radius: 15px;
+}
+
+header #titre p {
+    color: #fff;
+    font-size: 24px;
+}
     /*style de la nav du haut*/
 
 #nav_haut {
